--- a/package.json
+++ b/package.json
@@ -26,34 +26,34 @@
     "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
-    "@nestjs/axios": "0.0.1",
+    "@nestjs/axios": "0.0.3",
     "@nestjs/bull": "^0.4.2",
-    "@nestjs/common": "^8.2.0",
-    "@nestjs/config": "^1.1.0",
-    "@nestjs/core": "^8.2.0",
+    "@nestjs/common": "^8.2.3",
+    "@nestjs/config": "^1.1.5",
+    "@nestjs/core": "^8.2.3",
     "@nestjs/mapped-types": "^1.0.0",
-    "@nestjs/platform-express": "^8.2.0",
+    "@nestjs/platform-express": "^8.2.3",
     "@nestjs/schedule": "^1.0.2",
     "@nestjs/typeorm": "^8.0.2",
     "axios": "^0.21.3",
     "bull": "^3.29.1",
     "cache-manager": "^3.4.4",
     "class-transformer": "^0.4.0",
-    "class-validator": "^0.13.1",
+    "class-validator": "^0.13.2",
     "currency.js": "^2.0.4",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "ts-node": "^10.0.0",
-    "typeorm": "^0.2.37",
+    "typeorm": "^0.2.41",
     "typescript": "^4.3.5",
     "xlsx": "^0.17.2"
   },
   "devDependencies": {
-    "@nestjs/cli": "^8.0.0",
+    "@nestjs/cli": "^8.1.5",
     "@nestjs/schematics": "^8.0.0",
-    "@nestjs/testing": "^8.0.0",
+    "@nestjs/testing": "^8.2.3",
     "@types/cache-manager": "^3.4.2",
     "@types/cron": "^1.7.3",
     "@types/express": "^4.17.13",
@@ -65,7 +65,7 @@
     "eslint": "^7.30.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
-    "jest": "27.0.6",
+    "jest": "^27.0.6",
     "prettier": "^2.3.2",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
